refactor: :construction: added Trivia / Question Page | time, random, css - Completed

--- a/src/pages/css/Trivia.css
+++ b/src/pages/css/Trivia.css
@@ -2,6 +2,11 @@ button {
   cursor: pointer;
 }
 
+.answersButtons {
+  display: flex;
+  align-items: flex-start;
+}
+
 .correctAnswer {
   border: 3px solid rgb(6, 240, 15);
 }
